--- a/Project.toml
+++ b/Project.toml
@@ -3,8 +3,14 @@ uuid = "e6233ccc-e36c-49e3-ac71-1ad7b6c78055"
 authors = ["Daniel Molina"]
 version = "0.1.0"
 
+[deps]
+LightXML = "9c8b4983-aa76-5018-a973-4c85ecc9e179"
+Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
+
 [compat]
 julia = "1.3.1"
+LightXML = "0.8.1"
+Parameters = "0.12.0"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
