Rename QuestionsMoodle -> MoodleQuestions.

--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "QuestionsMoodle"
+name = "MoodleQuestions"
 uuid = "e6233ccc-e36c-49e3-ac71-1ad7b6c78055"
 authors = ["Daniel Molina"]
 version = "0.1.0"
