--- a/Project.toml
+++ b/Project.toml
@@ -4,14 +4,19 @@ authors = ["Daniel Molina"]
 version = "0.1.0"
 
 [deps]
+HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 LightXML = "9c8b4983-aa76-5018-a973-4c85ecc9e179"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
+Sockets = "6462fe0b-24de-5631-8697-dd941f90decc"
+ZipFile = "a5390f91-8eb1-5f08-bee0-b1d1ffed6cea"
 
 [compat]
+HTTP = "0.8.14"
 LightXML = "0.8.1"
 OrderedCollections = "1.1.0"
 Parameters = "0.12.0"
+ZipFile = "0.9.1"
 julia = "1.3.1"
 
 [extras]
