--- a/Project.toml
+++ b/Project.toml
@@ -4,10 +4,12 @@ authors = ["Daniel Molina"]
 version = "0.2.0"
 
 [deps]
+Formatting = "59287772-0a20-5a39-b81b-1366585eb4c0"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 LightXML = "9c8b4983-aa76-5018-a973-4c85ecc9e179"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
+SimpleTranslations = "d3f95609-6610-4916-a459-7889d74a9b0e"
 Sockets = "6462fe0b-24de-5631-8697-dd941f90decc"
 ZipFile = "a5390f91-8eb1-5f08-bee0-b1d1ffed6cea"
 
