Implement questions with multiple options.

--- a/src/messages.ini
+++ b/src/messages.ini
@@ -5,12 +5,12 @@ languages=en,es
 [en]
 reading_file=Error reading file '{}'
 noright_question=Error, question '{}' has not right option
-manyrights_question=Error, question '{}' has several right options, not yet implemented
+nooption=Error, question '{}' has not any option
 noquestion_line=Option '{}' without question
 
 [es]
 reading_file=Error leyendo el fichero '{}'
 noright_question=Error, la pregunta '{}' no tiene ninguna opción correcta
-manyrights_question=Error, pregunta '{}' tiene varias opciones correctas, todavía no implementado
+nooption=Error, la pregunta '{1}' no tiene ninguna opción
 noquestion_line=La opción '{}' no tiene pregunta asociada
 
