--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "MoodleQuestions"
 uuid = "e6233ccc-e36c-49e3-ac71-1ad7b6c78055"
 authors = ["Daniel Molina"]
-version = "0.2.0"
+version = "0.2.1"
 
 [deps]
 Formatting = "59287772-0a20-5a39-b81b-1366585eb4c0"
@@ -18,6 +18,7 @@ HTTP = "0.8.14"
 LightXML = "0.8.1, 0.9"
 OrderedCollections = "1.1.0"
 Parameters = "0.12.0"
+SimpleTranslations = "0.1.0"
 ZipFile = "0.9.1"
 julia = "1.3.1"
 
