Fix penalty functionality.

--- a/src/messages.ini
+++ b/src/messages.ini
@@ -7,10 +7,13 @@ reading_file=Error reading file '{}'
 noright_question=Error, question '{}' has not right option
 nooption=Error, question '{}' has not any option
 noquestion_line=Option '{}' without question
+true=True
+false=False
 
 [es]
 reading_file=Error leyendo el fichero '{}'
 noright_question=Error, la pregunta '{}' no tiene ninguna opción correcta
 nooption=Error, la pregunta '{1}' no tiene ninguna opción
 noquestion_line=La opción '{}' no tiene pregunta asociada
-
+true=Verdadero
+false=Falso
