--- a/Project.toml
+++ b/Project.toml
@@ -20,7 +20,7 @@ LightXML = "0.8.1, 0.9"
 OrderedCollections = "1.1.0"
 Parameters = "0.12.0"
 SimpleTranslations = "0.1.0"
-ZipFile = "0.9.1"
+ZipFile = "0.9.1, 0.10"
 julia = "1.7"
 
 [extras]
